// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ManageRestrictedJoinRuleDialog /> should list spaces which are not parents of the room 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ManageRestrictedJoinRuleDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Select spaces
      </h1>
    </div>
    <p>
      <span>
        Decide which spaces can access this room. If a space is selected, its members can find and join 
        <strong>
          !roomId:server
        </strong>
        .
      </span>
    </p>
    <div
      class="mx_SearchBox mx_textinput"
    >
      <input
        autocomplete="off"
        class="mx_textinput_icon mx_textinput_search mx_textinput_icon mx_textinput_search"
        data-testid="searchbox-input"
        placeholder="Search spaces"
        type="text"
        value=""
      />
      <div
        class="mx_AccessibleButton mx_SearchBox_closeButton"
        role="button"
        tabindex="-1"
      />
    </div>
    <div
      class="mx_AutoHideScrollbar mx_ManageRestrictedJoinRuleDialog_content"
      tabindex="-1"
    >
      <div
        class="mx_ManageRestrictedJoinRuleDialog_section"
      >
        <h3>
          Other spaces you know
        </h3>
        <label
          class="mx_ManageRestrictedJoinRuleDialog_entry"
        >
          <div>
            <div>
              <span
                class="_avatar_mcap2_17 mx_BaseAvatar _avatar-imageless_mcap2_61"
                data-color="1"
                data-testid="avatar-img"
                data-type="round"
                role="presentation"
                style="--cpd-avatar-size: 20px;"
              >
                O
              </span>
              <span
                class="mx_ManageRestrictedJoinRuleDialog_entry_name"
              >
                Other Space
              </span>
            </div>
            <div
              class="mx_ManageRestrictedJoinRuleDialog_entry_description"
            >
              0 members
            </div>
          </div>
          <span
            class="mx_Checkbox mx_Checkbox_hasKind mx_Checkbox_kind_solid"
          >
            <input
              id="checkbox_vY7Q4uEh9K"
              type="checkbox"
            />
            <label
              for="checkbox_vY7Q4uEh9K"
            >
              <div
                class="mx_Checkbox_background"
              >
                <div
                  class="mx_Checkbox_checkmark"
                />
              </div>
            </label>
          </span>
        </label>
      </div>
    </div>
    <div
      class="mx_ManageRestrictedJoinRuleDialog_footer"
    >
      <div
        class="mx_ManageRestrictedJoinRuleDialog_section_info"
      >
        You're removing all spaces. Access will default to invite only
      </div>
      <div
        class="mx_ManageRestrictedJoinRuleDialog_footer_buttons"
      >
        <div
          class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary_outline"
          role="button"
          tabindex="0"
        >
          Cancel
        </div>
        <div
          class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
          role="button"
          tabindex="0"
        >
          Confirm
        </div>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`<ManageRestrictedJoinRuleDialog /> should render empty state 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ManageRestrictedJoinRuleDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Select spaces
      </h1>
    </div>
    <p>
      <span>
        Decide which spaces can access this room. If a space is selected, its members can find and join 
        <strong>
          !roomId:server
        </strong>
        .
      </span>
    </p>
    <div
      class="mx_SearchBox mx_textinput"
    >
      <input
        autocomplete="off"
        class="mx_textinput_icon mx_textinput_search mx_textinput_icon mx_textinput_search"
        data-testid="searchbox-input"
        placeholder="Search spaces"
        type="text"
        value=""
      />
      <div
        class="mx_AccessibleButton mx_SearchBox_closeButton"
        role="button"
        tabindex="-1"
      />
    </div>
    <div
      class="mx_AutoHideScrollbar mx_ManageRestrictedJoinRuleDialog_content"
      tabindex="-1"
    >
      <span
        class="mx_ManageRestrictedJoinRuleDialog_noResults"
      >
        No results
      </span>
    </div>
    <div
      class="mx_ManageRestrictedJoinRuleDialog_footer"
    >
      <div
        class="mx_ManageRestrictedJoinRuleDialog_section_info"
      >
        You're removing all spaces. Access will default to invite only
      </div>
      <div
        class="mx_ManageRestrictedJoinRuleDialog_footer_buttons"
      >
        <div
          class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary_outline"
          role="button"
          tabindex="0"
        >
          Cancel
        </div>
        <div
          class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
          role="button"
          tabindex="0"
        >
          Confirm
        </div>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
